--- a/Onlinecompiler/templates/index.html
+++ b/Onlinecompiler/templates/index.html
@@ -11,12 +11,14 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    
     <title>Coderex</title>
+
   </head>
-  <body style="font-family:Verdana">
-    <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">
+  <body class="bg-dark" style="font-family:Verdana">
+    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+      
+      <a class="navbar-brand" href="http://127.0.0.1:8000/"  >
         <img src='/Onlinecompiler/static/logo.png' alt="" />
         Coderex</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,9 +27,6 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Import File</a>
           </li>
@@ -38,40 +37,7 @@
       </div>
     </nav><br>
 
-    <!-- Modal Import File -->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Upload File Python</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="file-loading">
-          <input id="input-b9" name="input-b9[]" multiple type="file">
-        </div>
-        <div id="kartik-file-errors"></div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Open</button>
-      </div>
-    </div>
-  </div>
-</div>
-<script>
-$(document).ready(function() {
-    $("#input-b9").fileinput({
-        showPreview: false,
-        showUpload: false,
-        elErrorContainer: '#kartik-file-errors',
-        allowedFileExtensions: ["png","jpg"]
 
-    });
-});
-</script>
 
 
     <!-- Modal Save File -->
@@ -89,27 +55,29 @@ $(document).ready(function() {
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save</button>
+        <button type="button" class="btn btn-info">Save</button>
       </div>
     </div>
   </div>
 </div>
 
-    <form action="/runcode" method="post">
+    <form action="/runcode" method="post" >
         {% csrf_token %}
-        <div class="form-group" style="margin-left:50px; margin-right:50px">
-          <label for="codearea">Your Code</label>
-          <textarea type="text" class="form-control" id="codearea" name="codearea" rows="10" onkeydown="if(event.keyCode===9){var v=this.value,s=this.selectionStart,e=this.selectionEnd;this.value=v.substring(0, s)+'\t'+v.substring(e);this.selectionStart=this.selectionEnd=s+1;return false;}">
+        <div class="form-group" style="margin-left:50px; margin-right:50px" >
+          <label for="codearea" style="color: #e3f2fd;">Your Code</label>
+          <textarea type="text"  class="form-control" id="codearea" name="codearea" rows="10" onkeydown="if(event.keyCode===1){var v=this.value,s=this.selectionStart,e=this.selectionEnd;this.value=v.substring(0, s)+'\t'+v.substring(e);this.selectionStart=this.selectionEnd=s+1;return false;}">
             {{ code }}</textarea>
         </div>
         <button type="submit" class="btn btn-primary" style="margin-left:50px">Run</button>
         <div class="form-group" style="margin-left:50px; margin-right:50px">
-            <label for="output">Output</label>
+            <label for="output" style="color: #e3f2fd;">Output</label>
             <textarea type="text" class="form-control" id="output" name="output" rows="4" disabled>{{ output }}</textarea>
 
         </div>
 
       </form>
+
+
 
   </body>
 </html>
