--- a/Onlinecompiler/templates/index.html
+++ b/Onlinecompiler/templates/index.html
@@ -1,7 +1,8 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,32 +12,18 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>Coderex</title>
-    
+
 
   </head>
   <body class="bg-dark" style="font-family:Verdana">
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-      
+
       <a class="navbar-brand" href="http://127.0.0.1:8000/"  >
-        <img src="{% static 'Onlinecompiler/static/logo.png' %}" />
+        {% load static %}
+        <img src="{% static 'static/logo.png' %}" />
         Coderex</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Import File</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModalCenter">Save File</a>
-          </li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="#" data-toggle="modal" data-target="#exampleModalCenter">Save File</a>
     </nav><br>
-
-
 
 
     <!-- Modal Save File -->
